--- a/source/less/blocks/additional-goods-product.less
+++ b/source/less/blocks/additional-goods-product.less
@@ -44,6 +44,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+  outline: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -78,18 +79,20 @@
   .additional-goods-product__text-wrapper {
     grid-area: text;
     padding: 0;
-    padding-top: 7px;
+    padding-top: 4px;
     margin: 0;
-    margin-bottom: 26px;
+    margin-bottom: 23px;
   }
 
   .additional-goods-product__text {
     width: 140px;
     text-align: right;
+    line-height: 20px;
   }
 
   .additional-goods-product__price {
     width: 91px;
+    line-height: 20px;
   }
 
   .additional-goods-product__link {
@@ -132,7 +135,7 @@
     padding: 0;
     margin: 0;
     grid-area: text;
-    margin-top: 17px;
+    margin-top: 15px;
   }
 
   .additional-goods-product__text {
