--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -78,11 +78,12 @@
   margin-top: 11px;
 }
 
-.card__link--button {
+.card__link-button {
   text-align: center;
   width: 260px;
   padding-bottom: 10px;
   padding-top: 10px;
+  outline: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -153,7 +154,7 @@
     border-bottom: 1px solid @toogle-border-grey;
   }
 
-  .card__link--button {
+  .card__link-button {
     width: 228px;
     padding-top: 9px;
     padding-bottom: 10px;
@@ -206,7 +207,7 @@
     border-bottom: 1px solid @toogle-border-grey;
   }
 
-  .card__link--button {
+  .card__link-button {
     width: 147px;
     margin: 0 auto;
     margin-top: auto;
