--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -37,6 +37,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .main-nav {
+    margin-top: 20px;
+  }
+
   .main-nav__list {
     width: 478px;
     display: flex;
