--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -121,7 +121,7 @@
     margin: 0 auto;
     padding: 0 30px;
     padding-top: 25px;
-    margin-bottom: 52px;
+    margin-bottom: 48px;
     width: 708px;
   }
 
@@ -147,6 +147,7 @@
 
   .page-header__main-nav {
     font-size: 18px;
+    line-height: 24px;
   }
 
   .page-header__toggle {
