--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -139,7 +139,7 @@
   }
 
   .result__definition {
-    background-color: @background-grey;
+    background-color: transparent;
     z-index: 2;
     font-size: 14px;
     line-height: 14px;
@@ -234,7 +234,7 @@
   }
 
   .result__definition {
-    background-color: @background-grey;
+    background-color: @basic_grey;
     z-index: 2;
     font-size: 14px;
     line-height: 14px;
