--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -48,8 +48,8 @@
       position: absolute;
       width: 100%;
       height: 3px;
-      left: 1px;
-      top: 32px;
+      left: 0;
+      top: 30px;
       background-color: @basic_green;
     }
   }
